--- a/tomo/templates/inline/part.html
+++ b/tomo/templates/inline/part.html
@@ -4,7 +4,7 @@
   <div class="span11">
 
     {% if not forloop.first or not forloop.last %}
-    <h4 class="part" style="background-image: url({{ STATIC_URL }}{% if attempt.solution %}{% if attempt.correct %}correct{% else %}incorrect{% endif %}{% else %}missing{% endif %}.png);">
+    <h4 class="part" style="background-image: url({{ STATIC_URL }}img/{% if attempt.solution %}{% if attempt.correct %}correct{% else %}incorrect{% endif %}{% else %}missing{% endif %}.png);">
       Podnaloga {{ forloop.counter }}
     </h4>
     {% endif %}
