--- a/tomo/static/css/tomo.css
+++ b/tomo/static/css/tomo.css
@@ -1,45 +1,11 @@
-      body {
-        padding-top: 60px;
-        padding-bottom: 40px;
-      }
-      .sidebar-nav {
-        padding: 9px 0;
-      }
-
-/* Override some defaults */
-html, body {
-  background-color: #eee;
-}
 body {
-  padding-top: 40px; /* 40px to make the container go all the way to the bottom of the topbar */
+  padding-top: 60px;
+  padding-bottom: 40px;
 }
-footer p {
-  text-align: center; /* center align it with the container */
+.sidebar-nav {
+  padding: 9px 0;
 }
-.container-fluid {
-  width: 820px; /* downsize our container to make the content feel a bit tighter and more cohesive. NOTE: this removes two full columns from the grid, meaning you only go to 14 columns and not 16. */
-}
-/* The white background content wrapper */
-.content {
-  background-color: #fff;
-  padding: 20px;
-  margin: 0 -20px; /* negative indent the amount of the padding to maintain the grid system */
-  -webkit-border-radius: 0 0 6px 6px;
-     -moz-border-radius: 0 0 6px 6px;
-          border-radius: 0 0 6px 6px;
-  -webkit-box-shadow: 0 1px 2px rgba(0,0,0,.15);
-     -moz-box-shadow: 0 1px 2px rgba(0,0,0,.15);
-          box-shadow: 0 1px 2px rgba(0,0,0,.15);
-}
-/* Page header tweaks */
-.page-header {
-  background-color: #f5f5f5;
-  padding: 20px 20px 10px;
-  margin: -20px -20px 20px;
-}
-.topbar .btn {
-  border: 0;
-}
+
 
 .my-actions {
   margin-top: -8px;
@@ -86,10 +52,10 @@ h4.part {
   padding-left: 24px; margin-left: -24px
 }
 h4 .correct {
-  background-image: url(001_06.png);
+  background-image: url({{ STATIC_URL }}img/001_06.png);
 }
 h4 .incorrect {
-  background-image: url({{ STATIC_URL }}001_05.png);
+  background-image: url({{ STATIC_URL }}img/001_05.png);
 }
 
 .stats {
