--- a/tomo/templates/base.html
+++ b/tomo/templates/base.html
@@ -8,14 +8,14 @@
 
     <!-- Le HTML5 shim, for IE6-8 support of HTML elements -->
     <!--[if lt IE 9]>
-      <script src="{{ STATIC_URL }}html5.js"></script>
+      <script src="{{ STATIC_URL }}js/html5.js"></script>
     <![endif]-->
 
     <!-- Le styles -->
     <link href="{{ STATIC_URL }}css/bootstrap.min.css" rel="stylesheet">
-    <link href="{{ STATIC_URL }}default.min.css" rel="stylesheet">
-    <link href="{{ STATIC_URL}}tomo.css" rel="stylesheet">
-    <!-- <link href="../assets/css/bootstrap-responsive.css" rel="stylesheet"> -->
+    <!-- <link href="{{ STATIC_URL }}css/bootstrap-responsive.min.css" rel="stylesheet"> -->
+    <link href="{{ STATIC_URL }}css/default.min.css" rel="stylesheet">
+    <link href="{{ STATIC_URL}}css/tomo.css" rel="stylesheet">
 
     <!-- Le fav and touch icons -->
     <!-- <link rel="shortcut icon" href="images/favicon.ico"> -->
@@ -38,7 +38,7 @@
           <div class="nav-collapse">
             <ul class="nav pull-right">
             {% if user.is_authenticated %}
-              <li class="dropdown" data-dropdown="dropdown">
+              <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">{{ user.get_full_name}} <b class="caret"></b></a>
                 <ul class="dropdown-menu">
                   <li><a href="{% url settings %}">Nastavitve</a></li>
@@ -97,9 +97,7 @@
       </footer>
     </div> <!-- /container -->
 
-    <!-- Le javascript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
+    <!-- Le javascript -->
     <script type="text/x-mathjax-config">
       MathJax.Hub.Config({
         tex2jax: {
@@ -108,14 +106,12 @@
       });
     </script>
     <script type="text/javascript" src="{{ STATIC_URL }}MathJax/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
-    <script src="{{ STATIC_URL }}jquery.js" type="text/javascript"></script>
-    <script src="{{ STATIC_URL }}bootstrap-dropdown.js" type="text/javascript"></script>
-    <script src="{{ STATIC_URL }}bootstrap-modal.js" type="text/javascript"></script>
-    <script src="{{ STATIC_URL }}bootstrap-twipsy.js" type="text/javascript"></script>
-    <script src="{{ STATIC_URL }}bootstrap-popover.js" type="text/javascript"></script>
-    <script src="{{ STATIC_URL }}tomo.js" type="text/javascript"></script>
-    <script src="{{ STATIC_URL }}highlight.min.js" type="text/javascript"></script>
+    <script src="{{ STATIC_URL }}js/jquery.js" type="text/javascript"></script>
+    <script src="{{ STATIC_URL }}js/bootstrap.min.js" type="text/javascript"></script>
+    <script src="{{ STATIC_URL }}js/tomo.js" type="text/javascript"></script>
+    <script src="{{ STATIC_URL }}js/highlight.min.js" type="text/javascript"></script>
     <script>hljs.initHighlightingOnLoad();</script>
+
 
   </body>
 </html>
