--- a/tomo/templates/base.html
+++ b/tomo/templates/base.html
@@ -96,7 +96,7 @@
                 {% else %}
                 <a href="#" class="status" title="Rešitve so {{ ps.get_solution_visibility_display }}">
                     {% if request.user.is_authenticated %}
-                      {% with percentage=solved|get:problem_set.id %}
+                      {% with percentage=solved|get:ps.id %}
                       <span class="label {% spaceless %}
                         {% if percentage == 100 %}success{% endif %}
                         {% if percentage < 100 and percentage >= 50 %}warning{% endif %}
