--- a/tomo/templates/actions/problem.html
+++ b/tomo/templates/actions/problem.html
@@ -1,3 +1,8 @@
+  <span class='help-block'>
+    Z zgornjim gumbom na svoj računalnik prenesete arhiv, ki vsebuje datoteke z nalogami.<br />
+    Navodila za reševanje so zapisana v datotekah.
+  </span>
+
 {% if user.is_authenticated %}
     {% if request.user.is_staff %}
     <div id="copy-{{ problem.id }}" class="modal hide fade">
@@ -32,10 +37,6 @@
       </div>
     </div>
 
-    <a href="{% url teacher_download problem.id %}"><button class='btn primary'>Uredi</button></a>
-    <a href="{% url student_download problem.id %}"><button class='btn'>Reši</button></a>
-    {% if not forloop.first %}<a href="{% url move_problem_up problem.id %}"><button class='btn'>Gor</button></a>{% endif %}
-    {% if not forloop.last %}<a href="{% url move_problem_down problem.id %}"><button class='btn'>Dol</button></a>{% endif %}
    <a data-controls-modal="copy-{{ problem.id }}" data-backdrop="true" data-keyboard="true" href="#"><button class='btn'>Kopiraj</button></a>
     <a href="{% url admin:tomo_problem_delete problem.id %}"><button class='btn danger'>Pobriši</button></a>
     <a href="{% url admin:tomo_problem_change problem.id %}"><button class='btn'>Napredno…</button></a>
