--- a/tomo/templates/problem_set.html
+++ b/tomo/templates/problem_set.html
@@ -7,46 +7,88 @@
   {{ problem_set.title }}
 {% endblock %}
 
-{% block breadcrumbs %}
-  <li>
-    <a href="{% url homepage %}">Začetna stran</a>
-    <span class="divider">/</span>
-  </li>
-  <li>
-    <a href="{% url course problem_set.course.id %}">{{ problem_set.course.name }}</a>
-    <span class="divider">/</span>
-  </li>
-  <li class="active">
-    {{ problem_set.title }}
-  </li>
-{% endblock %}
+{% block content %}
+  <h1>{{ problem_set.title }}</h1>
 
-{% block header %}
-  {{ problem_set.title }}
-{% endblock %}
-
-{% block description %}
-  {{ problem_set.description|tex_markdown|safe }}
-{% endblock %}
-
-{% block actions %}
-  {% include 'actions/problem_set.html' %}
-
-  {% if not request.user.is_staff %}
-  <span class='help-block'>
-    Z zgornjim gumbom na svoj računalnik prenesete arhiv, ki vsebuje datoteke z nalogami.<br />
-    Navodila za reševanje so zapisana v datotekah.
-  </span>
+  {% if request.user.is_staff %}
+  <ul class="nav nav-tabs">
+    <li class="active">
+      <a href="{% url problem_set problem_set.id %}">Naloga</a>
+    </li>
+    <li>
+      <a href="{% url view_statistics problem_set.id %}">Statistika</a>
+    </li>
+  </ul>
   {% endif %}
-{% endblock %}
 
-{% block contents %}
+  {{ problem_set.description|tex_markdown|safe }}
+
+  {% if request.user.is_staff %}
+    <a href="{% url teacher_zip problem_set.id %}" class="btn btn-primary"><i class="icon-edit icon-white"></i> Uredi sklop</a>
+    <a href="{% url student_zip problem_set.id %}" class="btn"><i class="icon-check"></i> Reši sklop</a>
+  {% else %}
+    {% if request.user.is_authenticated %}
+      <a href="{% url student_zip problem_set.id %}" class="btn-primary"><i class="icon-check icon-white"></i> Reši sklop</a>
+    {% else %}
+      {% include 'modal/anonymous_download_problem_set.html' %}
+      <a href="#anonymous-download-problem-set-{{ problem_set.id }}" data-toggle="modal" class="btn btn-primary"><i class="icon-check icon-white"></i> Reši sklop</a>
+    {% endif %}
+    <p class='help-block'>
+      Z zgornjim gumbom na svoj računalnik prenesete arhiv, ki vsebuje datoteke z nalogami.<br />
+      Navodila za reševanje so zapisana v datotekah.
+    </p>
+  {% endif %}
+
   {% for problem in problems %}
-    {% include 'inline/problem.html' %}
+    <hr />
+    {% if request.user.is_staff %}
+      <h2 id="problem-{{ problem.id }}">
+        {{ problem.title }}
+        <a class="icon-edit status" href="{% url teacher_download problem.id %}" title="Uredi nalogo"></a>
+        <a class="icon-check status" href="{% url student_download problem.id %}" title="Reši nalogo"></a>
+        <a class="icon-cog action" href="{% url admin:tomo_problem_change problem.id %}" title="Napredne nastavitve naloge…"></a>
+        <a class="icon-trash action" href="{% url admin:tomo_problem_delete problem.id %}" title="Pobriši nalogo"></a>
+        {% include 'modal/copy_problem.html' %}
+        <a class="icon-share-alt action" data-toggle="modal" href="#copy-problem-{{ problem.id }}" title="Kopiraj nalogo"></a>
+      </h2>
+    {% else %}
+      <h2 id="problem-{{ problem.id }}">
+        {{ problem.title }}
+        {% if request.user.is_authenticated %}
+          <a class="icon-check status" href="{% url student_download problem.id %}" title="Reši nalogo"></a>
+        {% else %}
+          <a class="icon-check status" href="#anonymous-download-problem-{{ problem.id }}" data-toggle="modal" title="Reši nalogo"></a>
+        {% endif %}
+      </h2>
+      {% include 'modal/anonymous_download_problem.html' %}
+    {% endif %}
+
+    {{ problem.description|tex_markdown|safe }}
+
+     {% for part in problem.parts.all %}
+      {% with attempts|get:part.id as attempt %}
+          {% include 'modal/view_solution.html' %}
+          <h4>
+            <a class="icon-search status" data-toggle="modal" title="Poglejte rešitev" href="#solutions-{{ problem.id }}-{{ part.id }}"></a>
+            Podnaloga {{ forloop.counter }}
+            {% if attempt.correct %}
+              <span style="vertical-align: top" class="label label-success">rešena</span>
+            {% else %}
+              <span style="vertical-align: top" class="label label-important">nerešena</span>
+            {% endif %}
+          </h4>
+          <div id="part-{{ part.id }}">
+            {{ part.description|tex_markdown|safe }}
+          </div>
+      {% endwith %}
+    {% endfor %}
   {% endfor %}
 
   {% if request.user.is_staff %}
-    {% include 'forms/add_problem.html' %}
+    <hr />
+    {% include "modal/add_problem.html" %}
+    <a href="#add-problem" data-toggle="modal"><button class="btn"><i class="icon-plus"></i> Dodaj nalogo</button></a>
   {% endif %}
-{% endblock %}
 
+
+{% endblock %}
